Bug Fix - vitrine app edit order info table collapse fixes

--- a/Tracking Table/static/css/edit_order.css
+++ b/Tracking Table/static/css/edit_order.css
@@ -54,3 +54,7 @@
 .indent-cell {
     padding-left: 1rem !important;
 }
+
+.frame-info-table {
+    min-width: 35rem;
+}
